implemeted node template query
