# sure_tosca-flask-server/sure_tosca/controllers/default_controller.py
@@ -1,26 +1,16 @@
-import os
-import uuid
+from toscaparser.topology_template import TopologyTemplate
+from toscaparser.tosca_template import ToscaTemplate
+
+from sure_tosca.service import tosca_template_service
+from sure_tosca.service.tosca_template_service import *
 
 import connexion
 import six
-import yaml
 
-from sure_tosca.models.node_template import NodeTemplate as NodeTemplateModel
-from sure_tosca.models.topology_template import TopologyTemplate  as TopologyTemplateModel
-from sure_tosca.models.tosca_template import ToscaTemplate  as ToscaTemplateModel
+from sure_tosca.models.node_template import NodeTemplate  # noqa: E501
+from sure_tosca.models.topology_template import TopologyTemplate  # noqa: E501
+from sure_tosca.models.tosca_template import ToscaTemplate  # noqa: E501
 from sure_tosca import util
-from tinydb import TinyDB, Query
-import tempfile
-from toscaparser.nodetemplate import NodeTemplate
-from toscaparser.tosca_template import ToscaTemplate
-from toscaparser.topology_template import TopologyTemplate
-
-db_dir_path = tempfile.gettempdir()
-db_file_path = os.path.join(db_dir_path, "db.json")
-db = TinyDB(db_file_path)
-
-
-# db.insert({'type': 'EFY', 'count': 800})
 
 
 def get_all_ancestor_properties(id, body=None, node_name=None):  # noqa: E501
@@ -57,7 +47,7 @@ def get_all_ancestor_types(id, body=None, node_name=None):  # noqa: E501
     :rtype: List[str]
     """
     if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
+        body = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -76,45 +66,26 @@ def get_ancestors_requirements(id, body=None, node_name=None):  # noqa: E501
     :rtype: Dict[str, object]
     """
     if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
+        body = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
-def get_interface_types(id, body=None, interface_type=None):  # noqa: E501
+def get_node_outputs(id, nodeTemplate=None, node_name=None):  # noqa: E501
     """
 
     s # noqa: E501
 
     :param id: ID of topolog template uplodaed
     :type id: str
-    :param body:
-    :type body: dict | bytes
-    :param interface_type: The interface type
-    :type interface_type: str
-
-    :rtype: List[Dict[str, object]]
-    """
-    if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
-
-
-def get_node_outputs(id, body=None, node_name=None):  # noqa: E501
-    """
-
-    s # noqa: E501
-
-    :param id: ID of topolog template uplodaed
-    :type id: str
-    :param body:
-    :type body: dict | bytes
+    :param nodeTemplate:
+    :type nodeTemplate: dict | bytes
     :param node_name: The node name
     :type node_name: str
 
     :rtype: Dict[str, object]
     """
     if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
+        nodeTemplate = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -133,7 +104,7 @@ def get_node_properties(id, body=None, node_name=None):  # noqa: E501
     :rtype: Dict[str, object]
     """
     if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
+        body = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -152,7 +123,7 @@ def get_node_requirements(id, body=None, node_name=None):  # noqa: E501
     :rtype: Dict[str, object]
     """
     if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
+        body = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -172,10 +143,29 @@ def get_node_templates(id, node_name=None, node_type=None, has_interface=None): 
 
     :rtype: List[NodeTemplate]
     """
+    return tosca_template_service.get_node_templates(id, name=node_name, node_type=node_type, has_interface=has_interface)
+
+
+def get_node_type_name(id, nodeTemplate=None, node_name=None):  # noqa: E501
+    """
+
+     # noqa: E501
+
+    :param id: ID of topolog template uplodaed
+    :type id: str
+    :param nodeTemplate: the NodeTemplate
+    :type nodeTemplate: dict | bytes
+    :param node_name: The node name
+    :type node_name: str
+
+    :rtype: str
+    """
+    if connexion.request.is_json:
+        nodeTemplate = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
-def get_node_type_name(id, body=None, node_name=None):  # noqa: E501
+def get_parent_type_name(id, nodeTemplate=None, node_name=None):  # noqa: E501
     """
 
      # noqa: E501
@@ -190,45 +180,26 @@ def get_node_type_name(id, body=None, node_name=None):  # noqa: E501
     :rtype: str
     """
     if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
+        nodeTemplate = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
-def get_parent_type_name(id, body=None, node_name=None):  # noqa: E501
-    """
-
-     # noqa: E501
-
-    :param id: ID of topolog template uplodaed
-    :type id: str
-    :param body:
-    :type body: dict | bytes
-    :param node_name: The node name
-    :type node_name: str
-
-    :rtype: str
-    """
-    if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
-
-
-def get_related_node(id, body=None, node_name=None):  # noqa: E501
+def get_related_node(id, nodeTemplate=None, node_name=None):  # noqa: E501
     """
 
     s # noqa: E501
 
     :param id: ID of topolog template uplodaed
     :type id: str
-    :param body:
-    :type body: dict | bytes
+    :param nodeTemplate:
+    :type nodeTemplate: dict | bytes
     :param node_name: The node name
     :type node_name: str
 
-    :rtype: List[NodeTemplateModel]
+    :rtype: List[NodeTemplate]
     """
     if connexion.request.is_json:
-        body = NodeTemplateModel.from_dict(connexion.request.get_json())  # noqa: E501
+        nodeTemplate = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -239,50 +210,14 @@ def set_node_properties(id, properties, node_name):  # noqa: E501
 
     :param id: ID of topolog template uplodaed
     :type id: str
-    :param properties: 
-    :type properties: 
+    :param properties:
+    :type properties:
     :param node_name: The node name
     :type node_name: str
 
     :rtype: Dict[str, object]
     """
     return 'do some magic!'
-
-
-def upload_tosca_template(file):  # noqa: E501
-    """upload a tosca template description file
-
-    upload and validate a tosca template description file # noqa: E501
-
-    :param file: tosca Template description
-    :type file: werkzeug.datastructures.FileStorage
-
-    :rtype: str
-    """
-    tosca_template_file_path = os.path.join(db_dir_path, file.filename)
-    tosca_template_dict = yaml.safe_load(file.stream)
-    tosca_template_model = ToscaTemplateModel.from_dict(tosca_template_dict)
-    tosca_template = ToscaTemplate(yaml_dict_tpl=tosca_template_dict)
-
-    doc_id = str(uuid.uuid4())
-    tosca_template_dict_with_id = {"id": doc_id}
-
-    tosca_template_dict_with_id.update(tosca_template_model.to_dict())
-    db.insert(tosca_template_dict_with_id)
-    return doc_id
-
-
-def get_tosca_template(id):  # noqa: E501
-    """get_tosca_template
-
-     # noqa: E501
-
-    :param id: ID of topolog template uplodaed
-    :type id: str
-
-    :rtype: ToscaTemplate
-    """
-    return get_ToscaTemplateModel_by_id(id)
 
 
 def get_topology_template(id):  # noqa: E501
@@ -295,13 +230,64 @@ def get_topology_template(id):  # noqa: E501
 
     :rtype: TopologyTemplate
     """
-    return get_ToscaTemplateModel_by_id(id).topology_template
+    return tosca_template_service.get_tosca_template_model_by_id(id).topology_template
 
 
-def get_ToscaTemplateModel_by_id(id):
-    query = Query()
-    tosca_template_list_dict = db.search(query.id == id)
-    tosca_template_dict = tosca_template_list_dict[0]
-    tosca_template_dict.pop("id")
-    tosca_template = ToscaTemplate(yaml_dict_tpl=tosca_template_dict)
-    return ToscaTemplateModel.from_dict(tosca_template_dict)
+def get_tosca_template(id):  # noqa: E501
+    """get_tosca_template
+
+     # noqa: E501
+
+    :param id: ID of topolog template uplodaed
+    :type id: str
+
+    :rtype: ToscaTemplate
+    """
+    return tosca_template_service.get_tosca_template_model_by_id(id)
+
+
+def upload_tosca_template(file):  # noqa: E501
+    """upload a tosca template description file
+
+    upload and validate a tosca template description file # noqa: E501
+
+    :param file: tosca Template description
+    :type file: werkzeug.datastructures.FileStorage
+
+    :rtype: str
+    """
+    return tosca_template_service.save(file)
+
+
+def get_related_nodes(id, nodeTemplate=None, node_name=None):  # noqa: E501
+    """
+
+    s # noqa: E501
+
+    :param id: ID of topolog template uplodaed
+    :type id: str
+    :param nodeTemplate:
+    :type nodeTemplate: dict | bytes
+    :param node_name: The node name
+    :type node_name: str
+
+    :rtype: List[NodeTemplate]
+    """
+    if connexion.request.is_json:
+        nodeTemplate = NodeTemplate.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def get_interface_types(id, interface_type=None):  # noqa: E501
+    """
+
+    returns the interface types # noqa: E501
+
+    :param id: ID of topolog template uplodaed
+    :type id: str
+    :param interface_type: The interface type
+    :type interface_type: str
+
+    :rtype: List[Dict[str, object]]
+    """
+    return tosca_template_service.get_interface_types(id, interface_type=interface_type)
